Fix spacing of jobs in docset-list page

--- a/app/assets/stylesheets/DocumentSet/index.less
+++ b/app/assets/stylesheets/DocumentSet/index.less
@@ -113,6 +113,7 @@ body.document-set-index {
   }
 
   .document-set-creation-jobs {
+    clear: both;
     margin-top: 20px;
   }
 
